# horus-code-block

./: Horus_code_block.h  Horus_cuda_code_block.h  LICENSE  README.md
c_example/: CMakeLists.txt  Horus_code_block_c_example.c
cpp_examples/: CMakeLists.txt  Horus_code_block_cpu_temperature.cpp  Horus_code_block_debug_source.cpp  Horus_code_block_lsb_eraser.cpp  Horus_code_block_output_message_base.cpp  Horus_code_block_output_message_base.hpp  Horus_code_block_user_context_base.cpp  Horus_code_block_user_context_base.hpp
examples/bno055/: CMakeLists.txt  README.md
examples/bno055/src/: BNO055.cpp  BNO055.hpp  BNO055_def.hpp  Gpio_trigger.cpp  Gpio_trigger.hpp  Horus_code_block_bno055.cpp  User_context.cpp  User_context.hpp
examples/cpu_temperature/: CMakeLists.txt  Horus_code_block_cpu_temperature.cpp
examples/cuda/: Helper_functions.cpp  Helper_functions.hpp  Horus_cuda.cpp  Horus_cuda.hpp  README.md
examples/cuda/tensor_rt_scale/: CMakeLists.txt  Kernel.cu  Network.hpp  README.md  cuda_tensor_rt_scale.cpp  cuda_tensor_rt_scale.hrp
examples/cuda/tensor_rt_segmentation/: CMakeLists.txt  Kernel.cu  Kernel.h  Network.hpp  README.md  Transforms.hpp  cuda_tensor_rt_segmentation.cpp  cuda_tensor_rt_segmentation.hrp  cuda_tensor_rt_segmentation_tegra.hrp
examples/cuda/video_flip/: CMakeLists.txt  Kernel.cu  README.md  cuda_video_flip.hrp  video_flip.cpp
examples/cuda/video_generator/: CMakeLists.txt  Kernel.cu  README.md  cuda_video_generator.hrp  video_generator.cpp
examples/debug_sink/: CMakeLists.txt  Horus_code_block_debug_sink.c
examples/framework/: CMakeLists.txt  Horus_code_block_debug_source.cpp  Horus_code_block_lsb_eraser.cpp  Horus_code_block_output_message_base.hpp  Horus_code_block_user_context_base.cpp  Horus_code_block_user_context_base.hpp
examples/nvidia_blog_navinfo_to_horus/: CMakeLists.txt  Horus_code_block_nvidia_blog_navinfo_to_horus.cpp
examples/nvidia_blog_navinfo_to_horus/lib/: json.hpp
examples/ptz_orientation_rpy_eight_sectors/: CMakeLists.txt  Horus_code_block_ptz_orientation_rpy_eight_sectors.cpp
